fix input field overflow

--- a/src/input.scss
+++ b/src/input.scss
@@ -12,7 +12,7 @@
 		  
 		  .input-field {
 			height: 55px;
-			padding: 20px;
+			padding: 10px 95px 10px 10px;
 			background-color:	$white;
 			border: none;
 			border-radius: 2px;
@@ -65,7 +65,6 @@
 		-webkit-appearance: none;
 		transition: all ease 240ms;
 		cursor: pointer;
-
 		min-width: 95px;
 		height: 40px;
 		box-shadow: 0px 2px 10px  #d8ddec;
